--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
         "start:npm": "yarn setup; yarn build:dev:es",
         "test": "BABEL_ENV=test NODE_ENV=test yarn jest",
         "test:e2e": "BROWSERSLIST_ENV=test npm-run-all -p -r start:examples cy:run",
-        "test:e2e:open": "BROWSERSLIST_ENV=test npm-run-all -p -r start:examples cy:open"
+        "test:e2e:open": "BROWSERSLIST_ENV=test npm-run-all -p -r start:examples cy:open",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
     },
     "browserslist": {
         "production": [
@@ -84,16 +86,39 @@
             "last 2 iOS versions",
             "IE 11"
         ],
-        "dev": ["last 1 Chrome versions", "last 1 Firefox versions"]
+        "dev": [
+            "last 1 Chrome versions",
+            "last 1 Firefox versions"
+        ]
     },
     "lint-staged": {
         "linters": {
-            "*.js": ["eslint --fix", "git add"],
-            "*.md": ["prettier --write --parser=markdown", "git add"],
-            "*.json": ["prettier --write --parser=json", "git add"],
-            "*.html": ["prettier --write --parser=html", "git add"],
-            "*.scss": ["prettier --write --parser=scss", "stylelint --syntax scss --fix", "git add"],
-            "*.css": ["prettier --write --parser=css", "stylelint --syntax css --fix", "git add"]
+            "*.js": [
+                "eslint --fix",
+                "git add"
+            ],
+            "*.md": [
+                "prettier --write --parser=markdown",
+                "git add"
+            ],
+            "*.json": [
+                "prettier --write --parser=json",
+                "git add"
+            ],
+            "*.html": [
+                "prettier --write --parser=html",
+                "git add"
+            ],
+            "*.scss": [
+                "prettier --write --parser=scss",
+                "stylelint --syntax scss --fix",
+                "git add"
+            ],
+            "*.css": [
+                "prettier --write --parser=css",
+                "stylelint --syntax css --fix",
+                "git add"
+            ]
         }
     },
     "husky": {
@@ -113,17 +138,27 @@
             "\\.(css|less|scss)$": "<rootDir>/scripts/jest/mocks/styleMock.js",
             "react-virtualized/dist/es": "react-virtualized/dist/commonjs"
         },
-        "transformIgnorePatterns": ["node_modules/(?!(react-virtualized/dist/es))"],
+        "transformIgnorePatterns": [
+            "node_modules/(?!(react-virtualized/dist/es))"
+        ],
         "collectCoverage": false,
         "coverageDirectory": "<rootDir>/reports",
-        "collectCoverageFrom": ["src/**/*.js", "!**/node_modules/**", "!**/__tests__/**"],
+        "collectCoverageFrom": [
+            "src/**/*.js",
+            "!**/node_modules/**",
+            "!**/__tests__/**"
+        ],
         "globalSetup": "<rootDir>/scripts/jest/env-setup.js",
-        "roots": ["src"],
+        "roots": [
+            "src"
+        ],
         "setupFilesAfterEnv": [
             "<rootDir>/node_modules/regenerator-runtime/runtime.js",
             "<rootDir>/scripts/jest/enzyme-adapter.js"
         ],
-        "snapshotSerializers": ["enzyme-to-json/serializer"]
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ]
     },
     "engines": {
         "node": ">=8.x",
@@ -149,6 +184,14 @@
         "@commitlint/config-conventional": "^8.1.0",
         "@commitlint/travis-cli": "^8.1.0",
         "@hapi/address": "^2.0.0",
+        "@storybook/addon-a11y": "^5.1.9",
+        "@storybook/addon-actions": "^5.1.9",
+        "@storybook/addon-info": "^5.1.9",
+        "@storybook/addon-knobs": "^5.1.9",
+        "@storybook/addon-links": "^5.1.9",
+        "@storybook/addon-notes": "^5.1.9",
+        "@storybook/addons": "^5.1.9",
+        "@storybook/react": "^5.1.9",
         "autoprefixer": "^9.6.1",
         "axios": "0.18.1",
         "babel-core": "^7.0.0-bridge.0",
@@ -225,10 +268,10 @@
         "properties-parser": "^0.3.1",
         "query-string": "5.1.1",
         "raf": "^3.4.0",
-        "react": "^16.8.0",
+        "react": "^16.8.6",
         "react-animate-height": "^2.0.8",
         "react-beautiful-dnd": "^9.0.2",
-        "react-dom": "^16.8.0",
+        "react-dom": "^16.8.6",
         "react-draggable": "^3.3.0",
         "react-immutable-proptypes": "^2.1.0",
         "react-intl": "^2.8.0",
