--- a/package.json
+++ b/package.json
@@ -290,6 +290,7 @@
         "scroll-into-view-if-needed": "^2.2.20",
         "semantic-release": "^16.0.0-beta.19",
         "sinon": "^2.3.7",
+        "storybook-addon-intl": "^2.4.1",
         "string-replace-loader": "^2.1.1",
         "style-loader": "^0.23.0",
         "stylelint": "^10.1.0",
