--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
         "@storybook/addon-knobs": "^5.1.9",
         "@storybook/addon-links": "^5.1.9",
         "@storybook/addon-notes": "^5.1.9",
+        "@storybook/addon-viewport": "^5.1.10",
         "@storybook/addons": "^5.1.9",
         "@storybook/react": "^5.1.9",
         "autoprefixer": "^9.6.1",
